# HFU

./: README.md
1. Semester/Datenbanken/Aufgabenblatt10/: aufgabe.sql  ddl.sql
1. Semester/Datenbanken/Aufgabenblatt11/: aufgabe.sql
1. Semester/Datenbanken/Aufgabenblatt5/: Aufgabe1.sql  barcodes.csv
1. Semester/Datenbanken/Aufgabenblatt6/: aufgabe.sql
1. Semester/Datenbanken/Aufgabenblatt7/: Aufgabe.sql
1. Semester/Datenbanken/Aufgabenblatt8/: readme.txt
1. Semester/Datenbanken/Aufgabenblatt9/: aufgabe.sql
1. Semester/Datenbanken/Aufgbaenblatt4/: blattvier.sql
1. Semester/Datenbanken/Probeklausur/: Select_Anweisungen.sql  (+1 more)
1. Semester/Programierung/: Probeklausur.cpp
3.Semester/AFS/: pom.xml
3.Semester/Objektorientiertes Programieren/: CMakeLists.txt
3.Semester/Objektorientiertes Programieren/Worksheet 11/: BattleSimulation.h  CMakeLists.txt  Character.cpp  Character.h  City.cpp  City.h  Dwarf.cpp  Dwarf.h  Elf.cpp  Elf.h  Orc.cpp  Orc.h  Position.cpp  Position.h  sort.h  test.cpp
3.Semester/Objektorientiertes Programieren/Worksheet 3/: CMakeLists.txt  Position.cpp  Position.h  Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp
6. Semester/Interaktives-Webdesign/: Dokumentation installation.docx  Dokumentation_installation_final.docx  VL3_Setup.docx  Vorlesung2_Uebungen_Final.docx  Vorlesung2_Übungen.docx
Datenbanken/Blattdrei/: blattdrei.sql
Einführung in die Informatik/Aufgabe 0/: HowToRun.txt
Einführung in die Informatik/Aufgabe 1/: Aufgabe 1.txt
Programierung/Uebungdrei/: PQ_Formel.cpp
Programierung/Uebungzwei/: Aufgabe_eins.cpp
(+629 files in other folders)
