cmake_minimum_required(VERSION 3.29)
project(Worksheet_3)

set(CMAKE_CXX_STANDARD 20)

add_executable(Worksheet_3_Task1 Task1.cpp)
add_executable(Worksheet_3_Task2 Task2.cpp)
add_executable(Worksheet_3_Task3 Task3.cpp Position.h Position.cpp)
add_executable(Worksheet_3_Task4 Task4.cpp Position.h Position.cpp)
